# control_algorithm

./: README.md
devel/: .catkin  local_setup.sh  setup.sh
devel/lib/LQR/: lqr_controller
devel/lib/MPC/: mpc_controller
devel/lib/Purepursuit/: pp_controller
devel/lib/Stanley/: stanley_controller
devel/lib/pkgconfig/: LQR.pc  MPC.pc  Purepursuit.pc  Stanley.pc
devel/share/LQR/cmake/: LQRConfig.cmake
devel/share/MPC/cmake/: MPCConfig.cmake
devel/share/Purepursuit/cmake/: PurepursuitConfig.cmake
devel/share/Stanley/cmake/: StanleyConfig.cmake
src/CANBUS/: CMakeLists.txt  README.md  package.xml
src/CANBUS/src/: receive.cpp  send.cpp
src/LQR/: CMakeLists.txt  package.xml
src/LQR/include/: LQR.h  Reference_path.h  pid_controller.h
src/LQR/src/: KinematicModel.cpp  LQR.cpp  Reference_path.cpp  main.cpp
src/MPC/: CMakeLists.txt
src/MPC/include/: MPC.h
src/MPC/src/: MPC.cpp  Reference_path.cpp  main.cpp
src/Purepursuit/: CMakeLists.txt
src/Purepursuit/include/: KinematicModel.h  pure_pursuit.h
src/Purepursuit/src/: main.cpp  pure_pursuit.cpp
src/QP_Smooth_referenceline/: CMakeLists.txt  README.md  package.xml
src/QP_Smooth_referenceline/include/: OSQP.h
src/QP_Smooth_referenceline/src/: OSQP.cpp  global_path_x.txt  global_path_y.txt  main.cpp
src/Stanley/: CMakeLists.txt
src/Stanley/include/: stanley.h
src/Stanley/src/: main.cpp  pid_controller.cpp  stanley.cpp
